# synthetic-telco-observability-data

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py
app/exporters/: __init__.py  csv_exporter.py  jsonl_exporter.py  parquet_exporter.py
app/generators/: __init__.py  cloud_generator.py  core_generator.py  dataset.py  incident_generator.py  metrics.py  oss_generator.py  ran_generator.py  service_impact_generator.py  time.py  topology_generator.py  transport_generator.py
app/scenarios/: __init__.py  base.py  cell_outage.py  congestion.py  fiber_cut.py  signaling_storm.py  slice_degradation.py  upf_degradation.py
app/schemas/: __init__.py  alarm.py  common.py  export.py  incident.py  kpi.py  service.py  topology.py
app/ui/: __init__.py  main.py
app/validators/: __init__.py  anomaly_validator.py  consistency_validator.py  schema_validator.py  topology_validator.py
configs/: default.yaml
configs/scenarios/: cell_outage.yaml  (+6 more)
docs/: architecture.md  autonomous-network-use-cases.md  blog-outline.md  data-model.md  limitations.md  scenario-design.md  validation-strategy.md
examples/: README.md
tests/: __init__.py  conftest.py  test_cli.py  test_cloud_generator.py  test_consistency_validation.py  test_core_generator.py  test_exporters.py  test_incident_generator.py  test_oss_generator.py  test_ran_generator.py  test_reproducibility.py  test_schema_validation.py  test_topology_generator.py  test_transport_generator.py  test_ui_smoke.py
(+25 files in other folders)
