[project]
name = "synthetic-telco-observability-data"
version = "0.1.0"
description = "Synthetic telecom observability data generator for safe AI-assisted network assurance experiments."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Synthetic Telco Observability Data Contributors" }]
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "jinja2>=3.1",
  "networkx>=3.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
synthetic-telco-data = "app.cli:app"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
ignore_missing_imports = true
strict = true
warn_unused_ignores = false
